kube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tf2
  namespace: tf2
  labels:
    app: tf2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tf2
  template:
    metadata:
      labels:
        app: tf2
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64  # avoid pi
      securityContext:
        fsGroup: 1000
      containers:
        - name: tf2
          image: cm2network/tf2
          ports:
            - containerPort: 27015
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
          readinessProbe:
            failureThreshold: 30  # 5 min
            periodSeconds: 10
            timeoutSeconds: 3
            exec:
              command:
                # https://developer.valvesoftware.com/wiki/Server_queries#A2S_INFO
                - /bin/bash
                - -c
                - >-
                  exec 3<>/dev/udp/$POD_IP/27015;
                  printf "\377\377\377\377TSource Engine Query\000" >&3;
                  head -c1 <&3 >/dev/null
          volumeMounts:
            - name: game
              mountPath: /home/steam/tf-dedicated
            - name: config
              mountPath: /config
              readOnly: true
          lifecycle:
            preStop:
              # shut down the server gracefully
              exec:
                command:
                  - "/bin/bash"
                  - "-c"
                  - "pkill -INT srcds_linux64; sleep 3"
          resources:
            requests:
              ephemeral-storage: 15Gi # TF2 is 14Gi in 2026
      terminationGracePeriodSeconds: 20
      volumes:
        - name: game
          emptyDir:
            sizeLimit: 20Gi
        - name: config
          configMap:
            name: tf2-server-cfg
