kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tf2
  namespace: tf2
spec:
  type: NodePort
  selector:
    app: tf2
  ports:
    - port: 27015
      targetPort: 27015
      # vanilla k8s nodeports are 30000-32767 so we can't use 27015:
      nodePort: 30015
      protocol: UDP
