kube/web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tf2-web
  namespace: tf2
spec:
  type: ClusterIP
  selector:
    app: tf2-web
  ports:
    - name: http
      port: 80
      targetPort: http
