kube/web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tf2-web
  namespace: tf2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: tf2.k3s.fluv.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tf2-web
                port:
                  name: http
  tls:
    - hosts:
        - tf2.k3s.fluv.net
      secretName: tf2-k3s-fluv-net-tls
